feat(1.1.0): 代码优化，翻译英文

--- a/i18n/zh_cn.json
+++ b/i18n/zh_cn.json
@@ -1,13 +1,18 @@
 {
-  "message.select.functions": "选择需要添加的功能",
-  "message.select.eslint.config": "选择额外的 Eslint 配置",
-  "choice.eslint": "添加 eslint 支持",
-  "choice.husky": "添加 husky、lint-staged、commitlint 支持",
-  "choice.eslint.ts": "适配 typescript 相关",
-  "choice.eslint.react": "适配 react 相关",
-  "hint.multiselect": "使用空格键多选，回车键确认",
-  "log.configuring": "正在配置开发环境",
-  "command.start": "启动命令",
-  "error.cancel.operation": "{figure} 操作被取消",
-  "error.cancel.configuring": "配置开发环境中断"
+  "message.select.functions": "选择需要添加的功能: ",
+  "message.select.eslint.config": "选择额外的 Eslint 配置: ",
+  "choice.eslint": "添加 eslint 支持.",
+  "choice.husky": "添加 husky、lint-staged、commitlint 支持.",
+  "choice.eslint.ts": "适配 typescript 相关.",
+  "choice.eslint.react": "适配 react 相关.",
+  "hint.multiselect": "使用空格多选，回车确认.",
+  "hint.optional": "使用空格键多选，回车键确认，不选择则直接确认.",
+  "log.setting": "正在设置中...",
+  "log.set.done": "设置 {name} 完成.",
+  "command.start": "启动命令.",
+  "option.lang": "设置显示内容的语言.",
+  "error.file.exists": "文件 {file} 已存在.",
+  "error.config.exists": "在 package.json 中已存在 {config} 配置.",
+  "error.operation.cancelled": "{figure} 操作被取消.",
+  "error.setting.aborted": "设置过程异常中断."
 }
