--- a/i18n/en_us.json
+++ b/i18n/en_us.json
@@ -3,12 +3,13 @@
   "message.select.eslint.config": "Choose additional Eslint configurations: ",
   "choice.eslint": "Add eslint support.",
   "choice.husky": "Add support for husky, lint-staged, and commitlint.",
-  "choice.eslint.ts": "Adapt for TypeScript-related settings.",
-  "choice.eslint.react": "Adapt for React-related settings.",
+  "choice.eslint.ts": "Adapt for TypeScript.",
+  "choice.eslint.react": "Adapt for React.",
   "hint.multiselect": "Use spacebar for multiple selection, enter to confirm.",
   "hint.optional": "Use spacebar for multiple selection, enter to confirm, or proceed without selection.",
   "log.setting": "Setting up...",
   "log.set.done": "Setting {name} completed.",
+  "log.install": "Run \"npm install\" to install dependencies.",
   "command.start": "Start command.",
   "option.lang": "Set the language for displayed content.",
   "error.file.exists": "File {file} already exists.",
